--- a/homeworks/konstantin.rusenko_ConstantinRusenko/10-components/tic-tac-toe/src/app/components/header/header.component.html
+++ b/homeworks/konstantin.rusenko_ConstantinRusenko/10-components/tic-tac-toe/src/app/components/header/header.component.html
@@ -1,7 +1,7 @@
-<header class="header">
+<header class="header" [ngClass]="{'cross' : otherTheme, 'circle' : !otherTheme}">
     <a class="header__link" href=".">
-        <svg class="header__logo">
-            <use xlink:href="/assets/sprite.svg#logo"></use>
+        <svg class="header__logo" xmlns="http://www.w3.org/2000/svg">
+            <use href="/assets/sprite.svg#logo"></use>
         </svg>
         <p class="header__title">{{title}}</p>
     </a>
