--- a/homeworks/konstantin.rusenko_ConstantinRusenko/10-components/tic-tac-toe/src/app/app.component.css
+++ b/homeworks/konstantin.rusenko_ConstantinRusenko/10-components/tic-tac-toe/src/app/app.component.css
@@ -94,10 +94,13 @@
 
 .main__control-buttons {
   display: flex;
+  flex-direction: column;
+  width: 100%;
 }
 
 .control-button {
-  margin: 10px 20px;
+  margin: 10px 0;
+  width: auto;
 }
 
 @media (max-width: 992px) {
@@ -108,6 +111,11 @@
 
   .main__control-buttons {
     flex-direction: column;
+    width: auto;
+  }
+
+  .control-button {
+    width: 375px;
   }
 }
 
@@ -126,6 +134,16 @@
 @media (max-width: 576px) {
 
   .input {
-    width: 70%;
+    width: 215px;
+  }
+
+  .control-button {
+    width: 300px;
+  }
+
+  .box {
+    min-width: 95px;
+    min-height: 95px;
+    font-size: 75px;
   }
 }
