fixed padding on 2400

--- a/homeworks/Andrii.Morozov_AndriiMorozov88/8-css-variables/style_variables.css
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/8-css-variables/style_variables.css
@@ -690,7 +690,7 @@ body {
   }
 
   .dreamhouse__title-container {
-    width: 75%;
+    width: 70%;
     justify-content: center;
   }
 
@@ -706,6 +706,10 @@ body {
 
   .design__text {
     font-size: var(--font-size-title);
+  }
+
+  .archmove {
+    padding-left: 150px;
   }
 
   .archmove__main-title {
