added mobile class sm-12

--- a/homeworks/Andrii.Morozov_AndriiMorozov88/8-css-variables/style_variables.css
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/8-css-variables/style_variables.css
@@ -473,17 +473,17 @@ body {
     align-items: center;
   }
 
-  .row__column--4 {
+  .row__column--sm-12 {
     max-width: 100%;
     flex-basis: 100%;
   }
 
-  .row__column--5 {
+  .row__column--sm-12 {
     max-width: 100%;
     flex-basis: 100%;
   }
 
-  .row__column--6 {
+  .row__column--sm-12 {
     max-width: 100%;
     flex-basis: 100%;
   }
