add colors on cross&zero, removed rewriting of array

--- a/homeworks/Andrii.Morozov_AndriiMorozov88/10-components/tik-tak-toe/src/app/field/square/square.component.css
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/10-components/tik-tak-toe/src/app/field/square/square.component.css
@@ -7,3 +7,11 @@
   background-color: #C4C4C4;
   cursor: pointer;
 }
+
+.field__square--cross {
+  background-color: #A5D9F6;
+}
+
+.field__square--zero {
+  background-color: #A5A6F6;
+}
