added all file project

--- a/homeworks/ihor.kropyvnyi_20-Igorek-21/11-directives/src/app/components/card/card.component.html
+++ b/homeworks/ihor.kropyvnyi_20-Igorek-21/11-directives/src/app/components/card/card.component.html
@@ -21,5 +21,7 @@
       </div>
     </div>
   </div>
-  <div class="section-card__tape" changeColor [changeBackgroundColor]="recipe.method.mash_temp[0].duration" ></div>
+  <div class="section-card__tape"
+       changeColor
+       [changeBackgroundColor]="recipe.method.mash_temp[0].duration" ></div>
 </section>
