--- a/homeworks/ivan.bieliaiev_Ckakipaki/10-directives/10-directives/src/app/app.component.css
+++ b/homeworks/ivan.bieliaiev_Ckakipaki/10-directives/10-directives/src/app/app.component.css
@@ -3,13 +3,28 @@
   max-width: 1190px;
   margin: 0 auto;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-direction: row;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 .coctail {
+  margin-bottom: 10px;
   display: flex;
-  width: 33%;
-  height: 50px;
+  justify-content: space-between;
+  width: 100%;
+  max-width: 33%;
+  height: auto;
 }
 
+.coctail__image {
+  width: 30%;
+  height: auto;
+}
+
+.coctail__content {
+  width: 50%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
