--- a/homeworks/ihor.kropyvnyi_20-Igorek-21/11-directives/src/app/components/card/card.component.css
+++ b/homeworks/ihor.kropyvnyi_20-Igorek-21/11-directives/src/app/components/card/card.component.css
@@ -3,7 +3,7 @@
   min-height: 940px;
   border-radius: 15px;
   padding: 25px;
-  margin: 0 20px 55px 30px;
+  margin: 0 20px 40px;
   overflow: hidden;
   position: relative;
   background-color: #F4F8F6;
