--- a/homeworks/konstantin.rusenko_ConstantinRusenko/10-components/tic-tac-toe/src/app/app.component.css
+++ b/homeworks/konstantin.rusenko_ConstantinRusenko/10-components/tic-tac-toe/src/app/app.component.css
@@ -4,51 +4,26 @@
   align-items: center;
 }
 
-.play-section {
-  width: 100%;
-  display: flex;
-  justify-content: space-around;
-}
-
-.control-section {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
 .main__turn {
   font-size: 26px;
-  color: #FFF;
-  padding: 20px;
-}
-
-.cross {
-  background-color: #A5D9F6;
-}
-
-.circle {
-  background-color: #A5A6F6;
 }
 
 .main__players-name {
   display: flex;
-  flex-direction: column;
 }
 
 .main__player {
   display: flex;
   align-items: center;
+  margin: 0 2%;
 }
 
 .player-name__input {
   padding: 20px;
-  margin: 5px 0;
 }
 
 .player__score {
-  padding: 13px;
-  background: #A5D9F6;
-  color: #FFF;
+  margin-left: 5px;
   font-size: 36px;
 }
 
@@ -58,15 +33,14 @@
 }
 
 .box {
-  min-width: 110px;
-  min-height: 110px;
+  min-width: 25px;
+  min-height: 25px;
   text-align: center;
   background: #C4C4C4;
-  font-family: "Be Vietnam Pro";
+  padding: 25px;
   margin: 5px;
-  color: #FFF;
-  font-size: 87px;
-  font-weight: 500;
+  font-size: 21px;
+  font-weight: 700;
 }
 
 .box:hover {
@@ -74,22 +48,17 @@
   cursor: pointer;
 }
 
-.box__player-sign {
-  width: 100px;
-  height: 100px;
-}
-
 .main__winner-message {
   position: absolute;
-  top: 65px;
-  left: 0;
+  top: 25px;
+  left: 40%;
   font-weight: 500;
-  font-size: 30px;
+  font-size: 20px;
   line-height: 24px;
   padding: 25px;
   border-radius: 6px;
-  background: #6200EE;
-  color: #FFF;
+  background: #78D4F1;
+  color: #000;
 }
 
 .main__control-buttons {
@@ -108,18 +77,6 @@
 
   .main__control-buttons {
     flex-direction: column;
-  }
-}
-
-@media (max-width: 768px) {
-
-  .play-section {
-    display: flex;
-    flex-direction: column;
-  }
-
-  .main__winner-message {
-    left: 0;
   }
 }
 
