--- a/homeworks/ihor.kropyvnyi_20-Igorek-21/11-directives/src/app/components/card/card.component.html
+++ b/homeworks/ihor.kropyvnyi_20-Igorek-21/11-directives/src/app/components/card/card.component.html
@@ -1,3 +1,4 @@
+<div class="block">
 <section class="main-container__section-card">
   <div class="content-row content-row__section-card">
     <picture class="card-picture">
@@ -26,3 +27,4 @@
        changeColor
        [changeBackgroundColor]="recipe.method.mash_temp[0].duration" ></div>
 </section>
+</div>
