--- a/homeworks/ihor.kropyvnyi_20-Igorek-21/11-directives/src/app/components/cards/cards.component.css
+++ b/homeworks/ihor.kropyvnyi_20-Igorek-21/11-directives/src/app/components/cards/cards.component.css
@@ -1,6 +1,7 @@
 .container {
   width: 100%;
   height: 100%;
+  margin-top: 35px;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
