--- a/homeworks/nikolay.krasniuk_Kingstar22/10-directives/src/app/components/recipe-card/recipe-card.component.html
+++ b/homeworks/nikolay.krasniuk_Kingstar22/10-directives/src/app/components/recipe-card/recipe-card.component.html
@@ -1,16 +1,14 @@
-
 <div class="recipes__card">
     <img class="recipes__card-img" src="{{card.image_url}}" alt="img-recipes">
     <div class="recipes__desc">
         <h1 class="recipes__desc-title">{{card.name}}</h1>
-        <p class="recipes__desc-text"><span>Description: </span>{{card.description | slice:0:7}} ...</p>
-        <p class="recipes__desc-text"> <span>Food pairing: </span>{{card.food_pairing | slice:0:1}} ...</p>
-        <p class="recipes__desc-text">Ingredients: {{card.ingredients | transformIngredients}}</p>
+        <p class="recipes__desc-text"><span>Description: </span>{{card.description | slice:0:100}} ...</p>
+        <p class="recipes__desc-text"> <span>Food pairing: </span>{{card.food_pairing }}</p>
+        <p class="recipes__desc-text"><span>Ingredients:</span> {{card.ingredients | transformIngredients}}</p>
         <p
-            class="recipes__desc-text" [appChangeInformation] = "'red'">Time to cook: {{card.method | getAllDuration}} minutes</p>
+            class="recipes__desc-text" >Time to cook: <span [appChangeColorDirective]="card.method | getAllDuration"   >{{card.method | getAllDuration}}</span>  minutes</p>
     </div>
-    <div class="recipes__label">
-        <p class="recipes__label-text">Medium</p>
+    <div class="recipes__label" [appChangeInformation]="card.method | getAllDuration">
     </div>
 </div>
 
