added working move-component

--- a/homeworks/Andrii.Morozov_AndriiMorozov88/10-components/tik-tak-toe/src/app/app.component.html
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/10-components/tik-tak-toe/src/app/app.component.html
@@ -4,6 +4,7 @@
     </svg>
     <h1 class="header__title">Tic-Tac-Toe Game</h1>
 </header>
+<app-move class="app-move"></app-move>
 <div class="game-container">
     <app-control></app-control>
     <app-field></app-field>
