changed structure of app

--- a/homeworks/Andrii.Morozov_AndriiMorozov88/10-components/tik-tak-toe/src/app/control/control.component.css
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/10-components/tik-tak-toe/src/app/control/control.component.css
@@ -1,3 +1,10 @@
+.game-container {
+  display: flex;
+  margin-top: 60px;
+  justify-content: space-around;
+  align-items: center;
+}
+
 .player {
   display: flex;
   color: #FFF;
