--- a/homeworks/Andrii.Morozov_AndriiMorozov88/10-components/tik-tak-toe/src/app/control/control.component.html
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/10-components/tik-tak-toe/src/app/control/control.component.html
@@ -1,24 +1,29 @@
-<div class="player">
-  <div class="player__name player--cross">
-    <svg width="35">
-      <use xlink:href="assets/sprite.svg#x"></use>
-  </svg>
-  <p>Player 1</p>
-  </div>
-  <div class="player__score player--cross">
-    <p>{{countPlayerOne}}</p>
-  </div>
+<div class="game-container">
+  <div>
+    <div class="player">
+      <div class="player__name player--cross">
+        <svg width="35">
+          <use xlink:href="assets/sprite.svg#x"></use>
+      </svg>
+      <p>Player 1</p>
+      </div>
+      <div class="player__score player--cross">
+        <p>{{countPlayerOne}}</p>
+      </div>
+    </div>
+    <div class="player">
+      <div class="player__name player--null">
+        <svg width="35">
+          <use xlink:href="assets/sprite.svg#circle-a5a6f6"></use>
+      </svg>
+      <p>Player 2</p>
+      </div>
+      <div class="player__score player--null">
+        <p>{{countPlayerTwo}}</p>
+      </div>
+    </div>
+    <button type="button" class="reset-button reset-button--current-game">Reset Current Game</button>
+    <button type="button" class="reset-button reset-button--all" (click)="resetAll()">Reset All</button>
+    </div>
+    <app-field></app-field>
 </div>
-<div class="player">
-  <div class="player__name player--null">
-    <svg width="35">
-      <use xlink:href="assets/sprite.svg#circle-a5a6f6"></use>
-  </svg>
-  <p>Player 2</p>
-  </div>
-  <div class="player__score player--null">
-    <p>{{countPlayerTwo}}</p>
-  </div>
-</div>
-<button type="button" class="reset-button reset-button--current-game">Reset Current Game</button>
-<button type="button" class="reset-button reset-button--all" (click)="resetAll()">Reset All</button>
