--- a/homeworks/Andrii.Morozov_AndriiMorozov88/10-components/tik-tak-toe/src/app/control/control.component.html
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/10-components/tik-tak-toe/src/app/control/control.component.html
@@ -22,7 +22,7 @@
         <p>{{countPlayerTwo}}</p>
       </div>
     </div>
-    <button type="button" class="reset-button reset-button--current-game">Reset Current Game</button>
+    <button type="button" class="reset-button reset-button--current-game" (click)="getCurrentReset()">Reset Current Game</button>
     <button type="button" class="reset-button reset-button--all" (click)="resetAll()">Reset All</button>
     </div>
     <app-field></app-field>
