--- a/homeworks/ivan.bieliaiev_Ckakipaki/10-direcrives/10-directives/src/app/cocktails/cocktails.component.css
+++ b/homeworks/ivan.bieliaiev_Ckakipaki/10-direcrives/10-directives/src/app/cocktails/cocktails.component.css
@@ -6,6 +6,7 @@
   max-width: 1200px;
   margin: 0 auto;
   padding: 30px;
+  box-sizing: border-box;
 }
 
 .cocktail {
@@ -17,10 +18,16 @@
   border: 1px solid #111;
   border-radius: 10px;
   margin-bottom: 20px;
+  position: relative;
+  overflow: hidden;
 }
 
 .cocktail__time {
+  top: -17px;
+  right: -1px;
+  position: absolute;
   border: 1px solid #111;
+  border-radius: 5px;
   padding: 10px;
   width: 100px;
 }
@@ -65,10 +72,12 @@
 
   .cocktails__container {
     flex-direction: column;
-    padding: 10px;
+    padding: 0;
+    align-items: center;
+    justify-content: center;
   }
 
   .cocktail {
-    width: 95%;
+    width: 100%;
   }
 }
