updated icons path

--- a/homeworks/vladyslav.kovalov_kovalov/10-components/src/app/components/board/board.component.html
+++ b/homeworks/vladyslav.kovalov_kovalov/10-components/src/app/components/board/board.component.html
@@ -10,10 +10,10 @@
       (click)="onClick(rowIndex, itemIndex)"
       >
       <svg *ngIf="item === 1" class="game-board__icon">
-        <use href="../../../assets/sprite.svg#circle"></use>
+        <use href="/assets/sprite.svg#circle"></use>
       </svg>
       <svg *ngIf="item === 2" class="game-board__icon">
-        <use href="../../../assets/sprite.svg#cross"></use>
+        <use href="/assets/sprite.svg#cross"></use>
       </svg>
       </button>
     </div>
