--- a/homeworks/vladyslav.kovalov_kovalov/10-components/src/app/components/header/header.component.html
+++ b/homeworks/vladyslav.kovalov_kovalov/10-components/src/app/components/header/header.component.html
@@ -1,7 +1,7 @@
 <header class="page-header">
   <div class="page-header__container page-container">
     <svg class="page-header__icon">
-      <use href="../../../assets/sprite.svg#logo"></use>
+      <use href="/assets/sprite.svg#logo"></use>
     </svg>
     <div class="page-header__title">
       Tic-Tac-Toe game
