--- a/homeworks/vladyslav.kovalov_kovalov/10-components/src/app/components/score/score.component.html
+++ b/homeworks/vladyslav.kovalov_kovalov/10-components/src/app/components/score/score.component.html
@@ -15,7 +15,7 @@
   <div class="players-score__element">
     <div class="players-score__player players-score__player--2">
       <svg class="players-score__player-icon">
-        <use href="../../../assets/sprite.svg#cross"></use>
+        <use href="/assets/sprite.svg#cross"></use>
       </svg>
       <div class="players-score__player-name">
         Player 2
