--- a/homeworks/konstantin.rusenko_ConstantinRusenko/10-directives/cocktail-recipe-book/src/app/components/card/card.component.css
+++ b/homeworks/konstantin.rusenko_ConstantinRusenko/10-directives/cocktail-recipe-book/src/app/components/card/card.component.css
@@ -32,13 +32,13 @@
 .card__description {
   width: 100%;
   overflow-x: hidden;
-  padding: 5px 0;
+  padding: 10px 0;
 }
 
 .card__ingredients {
   overflow-x: hidden;
   word-wrap: break-word;
-  padding: 5px 0;
+  padding: 10px 0;
 }
 
 .card__difficulty {
@@ -51,5 +51,9 @@
 
 .card__name {
   font-size: 24px;
+  font-weight: 700;
+}
+
+.bold {
   font-weight: 700;
 }
