--- a/homeworks/serhii.kulakivskyi_svkul/12-http/src/app/components/UI/checkbox/checkbox.component.html
+++ b/homeworks/serhii.kulakivskyi_svkul/12-http/src/app/components/UI/checkbox/checkbox.component.html
@@ -1,3 +1,3 @@
 <div class="checkbox" (click)="handleClick(!checked)">
-  <app-svg-icon *ngIf="checked" icon="check"></app-svg-icon>
+  <app-svg-icon *ngIf="checked" icon="check" width="12px"></app-svg-icon>
 </div>
