--- a/homeworks/serhii.kulakivskyi_svkul/12-http/src/styles.css
+++ b/homeworks/serhii.kulakivskyi_svkul/12-http/src/styles.css
@@ -27,6 +27,9 @@
 
   /* header */
   --header-background-color: var(--color-green);
+
+  /* checkbox */
+  --checkbox-color: var(--color-green);
 }
 
 body {
