--- a/homeworks/Andrii.Morozov_AndriiMorozov88/10-components/tik-tak-toe/src/app/control/control.component.html
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/10-components/tik-tak-toe/src/app/control/control.component.html
@@ -25,5 +25,5 @@
     <button type="button" class="reset-button reset-button--current-game" (click)="getCurrentReset()">Reset Current Game</button>
     <button type="button" class="reset-button reset-button--all" (click)="resetAll()">Reset All</button>
     </div>
-    <app-field></app-field>
+    <app-field (getScore)="getScore($event)"></app-field>
 </div>
