--- a/homeworks/vladyslav.kovalov_kovalov/10-components/src/app/components/board/board.component.css
+++ b/homeworks/vladyslav.kovalov_kovalov/10-components/src/app/components/board/board.component.css
@@ -1,8 +1,10 @@
 .game-board__grid {
   display: flex;
   flex-direction: column;
-  height: 600px;
-  width: 600px;
+  height: 100%;
+  width: auto;
+  max-width: 100%;
+  max-height: 100%;
   gap: 1rem;
 }
 
@@ -15,6 +17,7 @@
 .game-board__element {
   height: 200px;
   width: 200px;
+  flex: 1;
   border: 0;
   cursor: pointer;
   display: flex;
@@ -34,3 +37,16 @@
   height: 150px;
   width: 150px;
 }
+
+/* @media (max-width: 600px) {
+
+  .game-board__grid {
+    height: 400px;
+    width: 400px;
+    gap: 0;
+  }
+  .game-board__element {
+    height: 100px;
+    width: 100px;
+  }
+} */
