--- a/homeworks/nikolay.krasniuk_Kingstar22/12-http/src/app/app.component.html
+++ b/homeworks/nikolay.krasniuk_Kingstar22/12-http/src/app/app.component.html
@@ -14,6 +14,7 @@
                 [todo]="todo"
                 (clickBtn)="removeTodoItem($event)"
                 (changeTodo)="changeTodoItemStatus($event)"
+                (editTodoItem)="updateTodoItem($event, todo.id)"
             ></app-todo-list>
         </div>
     </div>
