--- a/homeworks/nikolay.krasniuk_Kingstar22/12-http/src/app/app.component.css
+++ b/homeworks/nikolay.krasniuk_Kingstar22/12-http/src/app/app.component.css
@@ -1,20 +1,25 @@
 .todo {
-  max-width: 1440px;
-  margin: 0 auto;
-  padding: 30px;
+  max-width: 1220px;
+  margin: 50px auto;
+  padding: 0 30px;
 }
 
 .todo-wrapper {
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 100%;
+  box-shadow: 0 4px 96px rgb(0 0 0 / 18%);
+  border-radius: 30px;
+  height: 600px;
+  overflow: hidden;
 }
 
 .todo__new {
   display: flex;
-  width: 50%;
+  width: 60%;
   justify-content: center;
-  margin: 20px;
+  padding: 10px;
   align-items: flex-end;
 }
 
@@ -30,14 +35,15 @@
   padding: 5px;
   border-radius: 8px;
   border: 2px solid  #FECB3E;
-  font-size: 20px;
+  font-size: 25px;
   margin-top: 15px;
   outline: none;
   cursor: pointer;
+  width: 100%;
 }
 
 .todo__new-btn, .todo__read-btn {
-  font-size: 20px;
+  font-size: 25px;
   padding: 5px;
   border-radius: 8px;
   color: #FFF;
@@ -49,5 +55,35 @@
 }
 
 .todo__item {
-  width: 50%;
+  width: 59%;
+  overflow-y: auto;
+  padding: 0 15px 5px 5px;
+  margin-top: 20px;
+}
+
+@media (max-width: 768px) {
+
+  .todo__new, .todo__item {
+    width: 100%;
+  }
+
+  .todo__new-label {
+    width: 60%;
+  }
+}
+
+@media (max-width: 425px) {
+
+  .todo {
+    padding: 15px;
+  }
+
+  .todo__new-input {
+    font-size: 16px;
+  }
+
+  .todo__new-btn, .todo__read-btn {
+    margin-left: 7px;
+    font-size: 16px;
+  }
 }
