added transparent to circle

--- a/homeworks/Andrii.Morozov_AndriiMorozov88/10-components/tik-tak-toe/src/app/control/control.component.html
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/10-components/tik-tak-toe/src/app/control/control.component.html
@@ -13,8 +13,8 @@
     </div>
     <div class="player">
       <div class="player__name player--null">
-        <svg width="35">
-          <use xlink:href="assets/sprite.svg#circle-a5a6f6"></use>
+        <svg width="35" class="icon-circle">
+          <use xlink:href="assets/sprite.svg#circle"></use>
       </svg>
       <p>Player 2</p>
       </div>
