--- a/homeworks/Andrii.Morozov_AndriiMorozov88/10-components/tik-tak-toe/src/app/field/square/square.component.html
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/10-components/tik-tak-toe/src/app/field/square/square.component.html
@@ -1,7 +1,7 @@
 <div class="field__square"
 [class.field__square--cross]="square === 1"
 [class.field__square--zero]="square === 2">
-    <svg width="65">
+    <svg width="65" class="icon-circle">
         <use [attr.xlink:href]="icon"></use>
     </svg>
 </div>
