--- a/homeworks/Andrii.Morozov_AndriiMorozov88/10-components/tik-tak-toe/src/app/control/control.component.html
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/10-components/tik-tak-toe/src/app/control/control.component.html
@@ -13,7 +13,7 @@
     </div>
     <div class="player">
       <div class="player__name player--null">
-        <svg width="30" class="icon-circle">
+        <svg width="30" class="icon-opacity">
           <use xlink:href="assets/sprite.svg#circle"></use>
       </svg>
       <h1>Player 2</h1>
